# camera_view

./: .gitignore  Dockerfile  calibration_camera.npz  main.py  modelo_rastreio_sol.pkl  pyproject.toml  requirements.txt
