[project]
name = "camera-view"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "joblib>=1.5.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pvlib>=0.15.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "ultralytics>=8.4.82",
]
